test/errors/identifiers_error/zs/reserved_keywords/java_keyword_field_name_error.zs
package reserved_keywords.java_keyword_field_name_error;

struct Item
{
    uint16  param;
    uint32  abstract; // reserved keyword in generated Java code
};
